--- a/Primera Pagina con Html y Css/productos.css
+++ b/Primera Pagina con Html y Css/productos.css
@@ -90,6 +90,14 @@ nav a:hover{
 
 footer{
     text-align: center;
-    background: url(imagenes/);
+    background: url(imagenes/bg.jpg);
+    padding: 40px;
+    
+
+}
+
+.copyright{
+    color: #ffffff;
+    font-size: 13px;
 }
 
