actualizacion del archivos

--- a/Primera Pagina con Html y Css/style.css
+++ b/Primera Pagina con Html y Css/style.css
@@ -106,11 +106,6 @@ footer{
 }
 
 /*----------- Styles main Contact -----------*/
-main{
-    width: 940px;
-    margin: 0 auto;
-}
-
 form{
     margin: 40px 0;
 }
@@ -208,11 +203,17 @@ td, th{
 
 .mapa{
     padding: 3em 0;
+    background: linear-gradient(#FEFEFE, #888888);
 }
 
 .mapa p{
     margin: 0 0 2em;
     text-align: center;
+}
+
+.mapa-contenido{
+    width: 940px;
+    margin: 0 auto;
 }
 
 .diferenciales{
@@ -233,6 +234,10 @@ td, th{
 
 .items{
     line-height: 1.5;
+}
+
+.items::before{
+    content:"★";
 }
 
 .items:first-child{
