--- a/Primera Pagina con Html y Css/style.css
+++ b/Primera Pagina con Html y Css/style.css
@@ -41,6 +41,8 @@ nav a:hover{
     text-decoration: underline;
 
 }
+
+/*----------------Styles productos-------------------*/
 .productos{
     width: 940px;
     margin: 0 auto;
@@ -106,6 +108,9 @@ footer{
 }
 
 /*----------- Styles main Contact -----------*/
+.contacto{
+    margin-left: 20%;
+}
 form{
     margin: 40px 0;
 }
@@ -178,9 +183,12 @@ td, th{
     font-size: 2em;
     margin: 0 0 1em;
     clear: left;
-
 }
 
+.titulo-principal:hover{
+    color: #062925;
+    transform: scale(1.2);
+}
 .principal p{
     margin: 0 0 1em;
 }
@@ -199,6 +207,7 @@ td, th{
     width: 120px;
     float: left;
     margin: 0 20px 20px 0;
+    
 }
 
 .mapa{
@@ -238,19 +247,55 @@ td, th{
 
 .items::before{
     content:"★";
+
 }
 
+.items:hover{
+    color: white;
+
+}
 .items:first-child{
     font-weight: bold;
 }
 
 .imagen-diferenciales{
     width: 60%;
+    opacity: 40%;
+    transition: 400ms;
+    box-shadow: 10px 10px 30px black;
+}
+
+.imagen-diferenciales:hover{
+    opacity: 100%;
 }
 
 .video{
     width: 560px;
     margin: 1em auto;
+}
+
+@media screen and (max-width:480px) {
+    h1{
+        text-align: center;
+    }
+
+    nav{
+        position: static;
+    }
+    .caja, .principal, .mapa-contenido, .contenido-diferenciales, .video, .productos{
+        width: auto;
+    }
+
+    .lista-diferenciales, .imagen-diferenciales{
+        width: 100%;
+    }
+
+    .productos li{
+        width: 100%;
+        margin: 10px;
+    }
+
+    
 }
 
 
