--- a/Primera Pagina con Html y Css/style.css
+++ b/Primera Pagina con Html y Css/style.css
@@ -3,7 +3,7 @@ body{
 }
 
 header{
-    background-color: #BBBBBB;
+    background-color: white;
     padding: 20px 0;
 }
 
@@ -169,6 +169,7 @@ td, th{
 /*------------------ styles page Home --------------------------*/
 .banner{
     width: 100%;
+    
 }
 
 .principal{
@@ -274,6 +275,7 @@ td, th{
     margin: 1em auto;
 }
 
+
 @media screen and (max-width:480px) {
     h1{
         text-align: center;
@@ -282,8 +284,13 @@ td, th{
     nav{
         position: static;
     }
+
+    nav li{
+        display: block;
+    }
     .caja, .principal, .mapa-contenido, .contenido-diferenciales, .video, .productos{
         width: auto;
+        margin: 5px;
     }
 
     .lista-diferenciales, .imagen-diferenciales{
@@ -291,8 +298,8 @@ td, th{
     }
 
     .productos li{
-        width: 100%;
-        margin: 10px;
+        width: auto;
+        margin: 5px;
     }
 
     
