--- a/Primera Pagina con Html y Css/style.css
+++ b/Primera Pagina con Html y Css/style.css
@@ -4,7 +4,9 @@ body{
 
 header{
     background-color: white;
-    padding: 20px 0;
+    padding: 20px;
+    box-shadow: 10px 10px 30px black;
+    
 }
 
 .caja{
@@ -18,18 +20,23 @@ nav{
     position: absolute; 
     top: 110px;
     right: 0;
+    
      
   }
 
 nav li{
     display: inline;
     margin: 0 0 0 15px;
-
+    /*border: 1px solid black;*/
+    border-radius: 10px;
+    padding: 10px;
+    background: #000000;
+    box-shadow: 10px 10px 30px black;
 }
 
 nav a{
     text-transform: uppercase;
-    color: #000000;
+    color: #FEFEFE;
     text-decoration: none;
     font-size: 20px;
     font-weight: bold;
@@ -109,10 +116,30 @@ footer{
 
 /*----------- Styles main Contact -----------*/
 .contacto{
-    margin-left: 20%;
+    margin: 10%;
+}
+.titulos-secundarios {
+    font-weight: bold;
+    text-align: center;
+    font-size: 20px;
+    margin: 15px;
+   background: #000000;
+   color: #FEFEFE;
+   padding: 10px;
+   border-radius: 10px;
+   box-shadow: 10px 10px 30px black;
+}
+
+h2:hover{
+    color: #c78c19;
+    text-decoration: underline;
+
 }
 form{
-    margin: 40px 0;
+    margin: 40px ;
+    padding: 20px;
+    box-shadow: 10px 10px 30px black;
+    
 }
 
 form label, form legend{
@@ -152,10 +179,11 @@ form label, form legend{
 
 table{
     margin: 40px 40px;
+    
 }
 
 thead{
-    background: #555555;
+    background: #000000;
     color: white;
     font-size: bold;
   
@@ -180,15 +208,19 @@ td, th{
 }
 
 .titulo-principal{
+    font-weight: bold;
     text-align: center;
     font-size: 2em;
     margin: 0 0 1em;
     clear: left;
+    
 }
 
 .titulo-principal:hover{
-    color: #062925;
+    
     transform: scale(1.2);
+    font-weight: bold;
+    
 }
 .principal p{
     margin: 0 0 1em;
@@ -283,10 +315,12 @@ td, th{
 
     nav{
         position: static;
+        
     }
 
     nav li{
         display: block;
+        margin: 10px;
     }
     .caja, .principal, .mapa-contenido, .contenido-diferenciales, .video, .productos{
         width: auto;
@@ -306,7 +340,38 @@ td, th{
 }
 
 
+/**/
 
+@media screen and (mix-width:100px) {
+    h1{
+        text-align: center;
+    }
+
+    nav{
+        position: static;
+        
+    }
+
+    nav li{
+        display: block;
+        margin: 10px;
+    }
+    .caja, .principal, .mapa-contenido, .contenido-diferenciales, .video, .productos{
+        width: auto;
+        margin: 5px;
+    }
+
+    .lista-diferenciales, .imagen-diferenciales{
+        width: 100%;
+    }
+
+    .productos li{
+        width: auto;
+        margin: 5px;
+    }
+
+    
+}
 
 
 
