--- a/1828-layouts-responsivos/css/bases.css
+++ b/1828-layouts-responsivos/css/bases.css
@@ -1,48 +1,52 @@
-:root{
-background-llamada-mobile: #00161C;
-background-blanco: #FFFFFF;
-background-azul-claro: #DFE3F5;
-background-ceniza-claro: #F7F4F4;
-background-ceniza-medio: #D9D9D9;
+:root {
+    --background-llamada-mobile: #00161C;
+    --background-blanco: #FFFFFF;
+    --background-azul-claro: #DFE3F5;
+    --background-ceniza-claro: #F7F4F4;
+    --background-ceniza-medio: #D9D9D9;
 
-/* //Borda */
-border-cabecera-mobile: #103D4A;
+    /* //Borda */
+    --border-cabecera-mobile: #103D4A;
 
-/* - Botón */
-boton-rojo: #B72E2E;
+    /* - Botón */
+    --boton-rojo: #B72E2E;
 
-/* - Fuente */
-fuente-ceniza-claro: #666666;
-fuente-ceniza-oscuro: #4F4C4C;
+    /* - Fuente */
+    --fuente-ceniza-claro: #666666;
+    --fuente-ceniza-oscuro: #4F4C4C;
+    --montserrat: "Montserrat", sans-serif;
+    --Open-Sans: "Open Sans", sans-serif;
 
-/* Planes */
-planes-card-start: #035A76;
-planes-card-ultra: #690F8E;
-planes-card-mega: #B00024;
+    /* Planes */    
+    --planes-card-start: #035A76;
+    --planes-card-ultra: #690F8E;
+    --planes-card-mega: #B00024;
 
-/* Enlace */
-fuente-enlace: #0006FF;
+    /* Enlace */
+    --fuente-enlace: #0006FF;
 
-/* Footer */
-background-footer: #333333;
+    /* Footer */
+    --background-footer: #333333;
+
 }
 
-body{
+body {
     font-family: 'Open Sans', sans-serif;
 }
 
-.container{
+.container {
     padding-right: 6%;
     padding-left: 6%;
-    margin-left: 6%;
+   
 }
-.boton{
+
+.boton {
     text-align: center;
     display: block;
     width: 100%;
     max-width: 350px;
     box-sizing: border-box;
     padding: 1rem 2rem;
-    border: 1px solid #fff;
+    border: 1px solid var(--boton-rojo);
     border-radius: 5px;
 }
