--- a/1828-layouts-responsivos/css/footer.css
+++ b/1828-layouts-responsivos/css/footer.css
@@ -1,4 +1,4 @@
-.footer {
+.footer__container {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -24,13 +24,26 @@
 
 .footer__navegacion {
     color: var(--background-blanco);
+    font: var(--Open-Sans);
     text-align: center;
     line-height: 3;
 }
 
 
-.footer__enlace {
+.footer__enlace{
     display: inline-block;
 
     margin: 0 .5rem .7rem;
+}
+
+@media screen and (min-width: 1024px) {
+    .footer {
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+    .footer__navegacion {
+        text-align: left;
+        min-width: 600px;
+    }
 }
