--- a/1828-layouts-responsivos/css/planes.css
+++ b/1828-layouts-responsivos/css/planes.css
@@ -104,3 +104,20 @@
 .tarjetas__boton--mega {
     border-color: var(--planes-card-mega);
 }
+
+@media screen and (min-width: 1024px) {
+    .planes__tarjetas {
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: flex-end;
+    }
+    .tarjetas {
+        max-width: 300px;
+    }
+}
+
+@media screen and (min-width: 600px) {
+    .tarjetas{
+        max-width: 400px;
+    }
+}
