--- a/1828-layouts-responsivos/css/footer.css
+++ b/1828-layouts-responsivos/css/footer.css
@@ -1,4 +1,4 @@
-.footer__container {
+.footer {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -24,7 +24,7 @@
 
 .footer__navegacion {
     color: var(--background-blanco);
-    font: var(--Open-Sans);
+    font: var(--open-sans);
     text-align: center;
     line-height: 3;
 }
@@ -37,12 +37,12 @@
 }
 
 @media screen and (min-width: 1024px) {
-    .footer {
+    .footer{
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: space-between;
     }
-    .footer__navegacion {
+    .footer__navegacion{
         text-align: left;
         min-width: 600px;
     }
