--- a/1828-layouts-responsivos/css/bases.css
+++ b/1828-layouts-responsivos/css/bases.css
@@ -15,7 +15,7 @@
     --fuente-ceniza-claro: #666666;
     --fuente-ceniza-oscuro: #4F4C4C;
     --montserrat: "Montserrat", sans-serif;
-    --Open-Sans: "Open Sans", sans-serif;
+    --open-sans: "Open Sans", sans-serif;
 
     /* Planes */    
     --planes-card-start: #035A76;
@@ -27,6 +27,7 @@
 
     /* Footer */
     --background-footer: #333333;
+
 
 }
 
