--- a/1828-layouts-responsivos/css/institucional.css
+++ b/1828-layouts-responsivos/css/institucional.css
@@ -53,13 +53,26 @@
     width: 100vw;
 }
 
+@media screen and (min-width:768px){
+    .institucional__contacto-email{
+        display: inline-block;
+    }
+
+    .institucional__video{
+        width: 100%;
+    }
+    
+}
+
 @media screen and (min-width: 1024px) {
     .institucional__contenido {
         width: 100%;
         display: flex;
         justify-content: space-between;
         text-align: left;
+        
     }
+
 
     .institucional__video {
         align-self: flex-end;
@@ -71,13 +84,3 @@
     }
 }
 
-@media screen and (min-width:768px){
-    .institucional__contacto-email{
-        display:inline-block
-    }
-
-    .institucional__video{
-        width: 100%;
-    }
-    
-}
