--- a/arquitectura-css-base-main/assets/css/receta/receta.css
+++ b/arquitectura-css-base-main/assets/css/receta/receta.css
@@ -4,5 +4,6 @@
     flex-direction: column;
     margin-bottom: 5rem;
     margin-right: 5rem;
-    width: 380px;
+    /* width: 380px; */
+    width: calc(25% - 5rem);
 }
